# Matrix

./: .env.example  .gitignore  README.md  UPDATE_ENV.sh  dreamdive.toml  dreamdive.toml.example  pyproject.toml
.dreamdive/: ingestion_manifest.json
docs/: AGENT_CONTEXT_GUIDE.md  CLI_COMMAND_REFERENCE.md  DOMAIN_ATTRIBUTES_GUIDE.md  DOMAIN_ATTRIBUTES_IMPLEMENTATION.md  DOMAIN_ATTRIBUTES_QUICKREF.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  NARRATIVE_ARCHITECTURE_GUIDE.md  NARRATIVE_ARCHITECTURE_QUICKREF.md  P0_P5_USAGE_GUIDE.md  PROMPT_IMPROVEMENTS_QUICKREF.md  PROMPT_QUALITY_IMPROVEMENTS.md  README.md  SECURITY_ALERT.md  SYNTHESIS_FIDELITY_GUIDE.md  SYNTHESIS_FIDELITY_QUICKREF.md  TOKEN_OPTIMIZATION_ANALYSIS.md  TOKEN_OPTIMIZATION_QUICKREF.md  TOKEN_OPTIMIZATION_SUMMARY.md  progress.md
examples/: token_optimization_demo_standalone.py
migrations/: 0001_initial_schema.sql  0002_domain_attributes.sql
resources/: dragonraja1.txt  dragonraja1_demo.txt  redcliff.txt
scripts/: regenerate_dragonraja_demo.py
tests/: README.md  check_embeddings.py  debug_json_responses.py  diagnose_moonshot.py  diagnose_timing.py  explain_batching.py  fix_existing_embeddings.py  quick_moonshot_test.py  test_background_jobs.py  test_background_queue_backend.py  test_background_runner.py  test_chinese_tokenizer.py  test_cli.py  test_cli_config.py  test_complex_prompt.py  test_config.py  test_context_and_goal_collision.py  test_event_simulation.py  test_event_window_selector.py  test_ingestion_pipeline.py  test_llm_client.py  test_llm_extraction_backend.py  test_qwen.py  (+23 more)
(+94 files in other folders)
